[tool.poetry]
name = "pandas demo"
version = "0.1.0"
description = "A Python & Pandas Demo Project"
authors = ["Hendrik Teuber <hendrik@dd5ht.de>"]

[tool.poetry.dependencies]
python = "3.9"
pandas = "*"
altair = "*"
streamlit = "*"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[tool.poetry.dev-dependencies.black]
version = "*"
extras = ["jupyter"]
